--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d52ea7bcd71b0c55907d77c348ce4ece&libraries=services,clusterer,drawing"
+    ></script>
+
     <title>React App</title>
   </head>
   <body>
